--- a/documentation/demos/demo12+1/transitions_org.html
+++ b/documentation/demos/demo12+1/transitions_org.html
@@ -75,6 +75,8 @@
      * THE SOFTWARE.
      *
      */
+
+    CAAT.DEBUG=1;
     (function() {
         /**
          * Startup it all up when the document is ready.
