--- a/documentation/demos/demo22/multitouch.html
+++ b/documentation/demos/demo22/multitouch.html
@@ -23,7 +23,7 @@
         </div>
         <div id="experiment">
             <div style="text-align:center">
-                <h1>Multitouch</h1>
+                <h1>Quadtree based collision detection</h1>
             </div>
             <div id="experiment-holder">
                 <canvas id="experiment-canvas"></canvas>
@@ -134,7 +134,7 @@
                 CAAT.loop(60);
             };
 
-            img.src= "logo_big.png";
+            img.src= "../demo-resources/img/logo_big.png";
         }
 
         /**
