--- a/documentation/demos/demo28/paint.html
+++ b/documentation/demos/demo28/paint.html
@@ -38,7 +38,7 @@
                 <div>
                     <p>Controls:</p>
                     <ul>
-                        <li>Drag or touch eventss.</li>
+                        <li>Drag or touch events.</li>
                     </ul>
                 </div>
             </div>
