* 09/15/2012 0.4 Build 319* --------------------------- * FIX. CAAT.Actor.scaleTo wasn't scaling correctly. * ADD. Automatic Actor layout capabilities on CAAT.ActorContainer. Switch from CAAT.UI.BorderLayout, CAAT.UI.GridLayout,        CAAT.UI.BoxLayout. * ADD. Demo29. Layouts

--- a/documentation/demos/demo27/font.html
+++ b/documentation/demos/demo27/font.html
@@ -11,10 +11,10 @@
 </head>
 <body>
 
-<div style="font-family: 'Baumans';">&nbsp;</div>
-<div style="font-family: 'Fresca';">&nbsp;</div>
-<div style="font-family: 'Righteous';">&nbsp;</div>
-<div style="font-family: 'Voltaire';">&nbsp;</div>
+<div style="font-family: 'Baumans'; float:left;">&nbsp;</div>
+<div style="font-family: 'Fresca'; float:left;">&nbsp;</div>
+<div style="font-family: 'Righteous'; float:left;">&nbsp;</div>
+<div style="font-family: 'Voltaire'; float:left;">&nbsp;</div>
 
 
 <div id="page">
