--- a/documentation/demos/demo4/coordinates_org.html
+++ b/documentation/demos/demo4/coordinates_org.html
@@ -369,7 +369,7 @@
                     setTextFillStyle('black').
                     setOutline(true).
                     cacheAsBitmap();
-            cc1.addChild(text5.setLocation(cc1.width/2,120));
+            cc1.addChild( text5.setLocation(cc1.width,120) );
 
             return scene;
         }
