--- a/documentation/demos/index.html
+++ b/documentation/demos/index.html
@@ -39,6 +39,7 @@
     <li><a href="demo25/flipcards.html">Flip cards</a></li>
     <li><a href="demo27/font.html">CAAT.Font</a></li>
     <li><a href="demo28/paint.html">Paint</a></li>
+    <li><a href="demo29/layout2.html">Auto Layout</a></li>
 
 </ul>
 
