Added demo29. Auto Layout.

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             <a href="documentation/demos/demo25/flipcards.html"><img class="image_h" src="thumbs/demo25.png" alt="Flip cards"></a>
             <a href="documentation/demos/demo27/font.html"><img class="image_h" src="thumbs/demo27.png" alt="Fonts"></a>
             <a href="documentation/demos/demo28/paint.html"><img class="image_h" src="thumbs/demo28.png" alt="Paint demo"></a>
+            <a href="documentation/demos/demo29/layout2.html"><img class="image_h" src="thumbs/demo29.png" alt="Auto Layout"></a>
 
         </div>
 
