--- a/documentation/demos/demo29/layout2.html
+++ b/documentation/demos/demo29/layout2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <script src="../../track.js" type="text/javascript"></script>
-    <title>CAAT example: Paint</title>
+    <title>CAAT example: Auto Layout</title>
 
     <link rel="stylesheet" href="../style/demo.css">
 
